# rx-chef

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/store/: Cargo.toml
crates/store/src/: history.rs  lib.rs  models.rs  paths.rs  recipe.rs  vars.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
src/: ffi.rs  lib.rs  magic.rs  operation.rs  pipeline.rs  runtime.rs
src/operations/: a1z26_cipher_decode.rs  a1z26_cipher_encode.rs  add.rs  add_line_numbers.rs  add_text_to_image.rs  adler32_checksum.rs  aes_decrypt.rs  aes_encrypt.rs  aes_key_unwrap.rs  aes_key_wrap.rs  affine_cipher_decode.rs  affine_cipher_encode.rs  alternating_caps.rs  amf_decode.rs  amf_encode.rs  analyse_hash.rs  analyse_uuid.rs  and.rs  argon2.rs  argon2_compare.rs  atbash_cipher.rs  avro_to_json.rs  bacon_cipher_decode.rs  bacon_cipher_encode.rs  bcrypt.rs  bcrypt_compare.rs  bcrypt_parse.rs  bifid_cipher_decode.rs  bifid_cipher_encode.rs  bit_shift_left.rs  bit_shift_right.rs  blake2b.rs  blake2s.rs  blake3.rs  blowfish_decrypt.rs  blowfish_encrypt.rs  blur_image.rs  bombe.rs  bson_deserialise.rs  bson_serialise.rs  (+440 more)
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: operations.rs  pipeline.rs
tests/tests/operations/: a1z26_cipher_decode.rs  a1z26_cipher_encode.rs  add.rs  add_line_numbers.rs  add_text_to_image.rs  adler32_checksum.rs  aes_decrypt.rs  aes_encrypt.rs  aes_key_unwrap.rs  aes_key_wrap.rs  affine_cipher_decode.rs  affine_cipher_encode.rs  alternating_caps.rs  amf_decode.rs  amf_encode.rs  analyse_hash.rs  analyse_uuid.rs  and.rs  argon2.rs  argon2_compare.rs  atbash_cipher.rs  avro_to_json.rs  bacon_cipher_decode.rs  bacon_cipher_encode.rs  bcrypt.rs  bcrypt_compare.rs  bcrypt_parse.rs  bifid_cipher_decode.rs  bifid_cipher_encode.rs  bit_shift_left.rs  bit_shift_right.rs  blake2b.rs  blake2s.rs  blake3.rs  blowfish_decrypt.rs  blowfish_encrypt.rs  blur_image.rs  bombe.rs  bson_deserialise.rs  bson_serialise.rs  (+439 more)
