[package]
name = "rxchef"
version = "1.1.0"
edition = "2021"
default-run = "rxchef"
description = "CyberChef ported to Rust - cryptographic, encoding, and data transformation operations"
license = "Apache-2.0"

[workspace]
members = [
    ".",
    "crates/cli",
    "crates/tui",
    "crates/store",
    "tests"
]
default-members = [
    ".",
    "crates/cli",
    "crates/tui",
]

[lib]
name = "rxchef"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
thiserror  = "1"
hex        = "0.4"
base64     = "0.22"
sha2       = "0.10"
sha1       = "0.10"
md-5       = "0.10"
digest     = "0.11"
hmac       = "0.12"
aes        = "0.8"
cbc        = { version = "0.1", features = ["alloc"] }
cfb-mode   = "0.8"
ctr        = "0.9"
des        = "0.8"
blowfish   = "0.9"
rc2        = "0.8"
flate2     = "1"
bzip2      = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"
chrono     = { version = "0.4", features = ["serde"] }
url        = "2"
crc        = "3"
num-bigint = "0.4"
num-traits = "0.2"
uuid       = { version = "1", features = ["v4"] }
unicode-normalization = "0.1"
encoding_rs = "0.8"
rand       = "0.8"
pbkdf2     = "0.12"
argon2     = "0.5"
scrypt     = "0.11"
rsa        = { version = "0.9", features = ["sha2"] }
cipher     = "0.4"
block-padding = "0.3"
generic-array = "0.14"
getrandom  = "0.2"
data-encoding = "2"
itertools  = "0.12"
bcrypt = "0.19.1"
ring = "0.17.14"
blake2 = "0.10.6"
blake3 = "1"
byteorder = "1.5.0"
md2 = "0.11"
md4 = "0.11"
ripemd = "0.1"
sha3 = "0.10"
whirlpool = "0.11"
apache-avro = { version = "0.21.0", features = ["derive"] }
ciborium = "0.2.2"
chacha20 = "0.10.0"
bs58 = "0.5.1"
base85 = "2.0.0"
html-escape = "0.2.13"
rmp-serde = "1.3.1"
quoted_printable = "0.5.2"
idna = "1"
plist = "1"
bson = "2"
serde_yaml = "0.9.34"
quick-xml = "0.40.1"
sqlformat = "0.5.0"
p256 = "0.13.2"
k256 = "0.13.4"
x509-parser = "0.18.1"
lz4_flex = "0.13.1"
xz2 = "0.1.7"
zip = "8.6.0"
tar = "0.4.45"
salsa20 = "0.11.0"
totp-lite = "2.0.1"
murmur3 = "0.5.2"
similar = "3.1.0"
levenshtein = "1.0.5"
streebog = "0.11.0"
gost94 = "0.10.0"
magma = "0.8.0"
kuznyechik = "0.8.0"
sm3 = "0.5.0"
sm4 = "0.6.0"
fernet = { version = "0.2.2", features = ["sha2", "hmac"] }
capstone = "0.14.0"
sequoia-openpgp = { version = "2.3.0", optional = true }
jaq-core = { version = "3.0.0", optional = true }
jaq-std = { version = "3.0.0", optional = true }
protobuf = "3.7.2"
prost = "0.14.3"
yara-x = "1.16.0"
phf = "0.13.1"
phf_codegen = "0.13.1"
deku = "0.20.3"
rc6 = "0.1.0"
rabbit = "0.5.0"
ssdeep = "0.7.0"
tlv_parser = "0.10.0"
ssh-key = "0.6.7"
der = { version = "0.8.0", features = ["alloc", "heapless"] }
cms = "0.2.3"
x509-cert = "0.2.5"
spki = "0.8.0"
pkcs1 = "0.7.5"
pkcs8 = "0.11.0"
scraper = "0.27.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
kamadak-exif = "0.6.1"
lofty      = "0.24.0"
ab_glyph   = "0.2"
tesseract-rs = { version = "0.2", optional = true }
leptonica-sys = { version = "0.3", optional = true }

[features]
pgp = ["dep:sequoia-openpgp"]
jsonata = ["dep:jaq-core", "dep:jaq-std"]
tesseract = ["dep:tesseract-rs", "dep:leptonica-sys"]

[build-dependencies]
regex = "1"
