[package]
name = "cyberchef-rust-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rxchef = { path = "../" }
regex = "1.12.3"
hex = "0.4.3"
image = "0.25"
imageproc = "0.25"
tar = "0.4.45"
ssdeep = "0.7.0"
bson = "2"
base64 = "0.22"
flate2 = "1"
zip = { version = "8.6.0", features = ["deflate"] }
bcrypt = "0.19.1"
xz2 = "0.1"
lz4_flex = "0.9"
plotters = "0.3"
encoding_rs = "0.8"
fernet = "0.2"
