[package]
name = "rxchef_cli"
version = "1.1.0"
edition = "2021"
description = "Command-line interface for rxchef"
license = "Apache-2.0"

[[bin]]
name = "rxchef"
path = "src/main.rs"

[dependencies]
clap         = { version = "4.5", features = ["derive"] }
rxchef       = { path = "../.." }
rxchef_store = { path = "../store" }
serde_json   = "1"
serde_yaml   = "0.9"
base64       = "0.22"
chrono       = "0.4"
