[package]
name = "rxchef_store"
version = "1.1.0"
edition = "2021"
description = "Global and project store for rxchef (recipes, variables, history)"
license = "Apache-2.0"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
chrono      = { version = "0.4", features = ["serde"] }
dirs        = "5"
thiserror   = "1"
uuid        = { version = "1", features = ["v4"] }
